started working on webscanner wip